--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,11 +1,14 @@
 .navContainer {
   display: flex;
-  width: 98%;
-  height: auto;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 8vh;
   justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 20px;
+  background-color: green;
   align-items: center;
+  position: fixed;
+  z-index: 999;
 }
 
 .logo {
