--- a/src/pages/login/index.module.css
+++ b/src/pages/login/index.module.css
@@ -1,6 +1,6 @@
 .bodyContainer {
   width: 100%;
-  height: 100vh;
+  height: 92vh;
 }
 
 .loginContainer {
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 8%;
+  padding-top: 18vh;
   gap: 20px;
 }
 
