--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -5,12 +5,11 @@
   width: 100%;
   height: 8vh;
   justify-content: space-between;
-  background-color: green;
   align-items: center;
   position: fixed;
   z-index: 999;
+  background-color: white;
 }
-
 .logo {
   text-decoration: none;
   color: black;
