--- a/src/pages/sign_up/index.module.css
+++ b/src/pages/sign_up/index.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  width: 100%;
   flex-direction: column;
   height: 100vh;
   max-width: 1280px;
@@ -13,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   width: 850px;
-  height: 1200px;
+  height: 800px;
   margin: 50px auto;
   border: 1px solid #bfbfbf;
 }
