--- a/src/pages/mypage /index.module.css
+++ b/src/pages/mypage /index.module.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100vh;
+  height: 92vh;
+  padding-top: 4vh;
   max-width: 1280px;
 }
 .containerLeft {
   width: 300px;
-  height: 100%;
+  height: 92vh;
   background-color: #fff8f7;
   display: flex;
   flex-direction: column;
@@ -31,9 +32,10 @@
   width: 100px;
   border: 0;
   background-color: transparent;
-  margin: 700px 0 0 150px;
+  margin: 630px 0 0 150px;
   font-size: 1rem;
   cursor: pointer;
+  opacity: 70%;
 }
 .containerRight {
   width: 100%;
