Refactor: context API Provider,nav,App.tsx
코드 유지보수를 위해 context API를 consumer 형태로 변경
nav바에 logut_handler 따로 함수 선언
login에 로컬에서 가져오는 get,set함수를 파일 생성하여 따로 놓음

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -60,20 +60,17 @@
   height: 50px;
 }
 
-.community:hover,
 .chatButton:hover,
 .logo:hover,
 .chat:hover,
-Button:hover {
+.community:hover {
   color: #b40404;
   transition: color 0.3s ease;
 }
 
-.community,
 .chatButton,
 .logo,
-.chat,
-Button {
+.chat {
   transition: color 0.5s ease;
 }
 
