Feat: mypage,myprofile완성, 탈퇴하기 구현
myprofile 완성, 탈퇴하기 버튼 구현

--- a/src/pages/sign_up/index.module.css
+++ b/src/pages/sign_up/index.module.css
@@ -1,11 +1,10 @@
 .container {
-  display: flex;
   width: 100%;
   flex-direction: column;
-  height: 100vh;
+  height: 92vh;
   max-width: 1280px;
-  margin: 100px auto;
-  padding: 0 40px;
+  margin: 0 auto;
+  padding-top: 15vh;
   align-items: center;
 }
 
