--- a/src/pages/mypage /index.module.css
+++ b/src/pages/mypage /index.module.css
@@ -3,14 +3,15 @@
   flex-direction: row;
   width: 100%;
   height: 92vh;
+  margin: 0;
   padding-top: 4vh;
-  max-width: 1280px;
 }
 .containerLeft {
   width: 300px;
-  height: 100vh;
+  height: 100%;
   background-color: #fff8f7;
   display: flex;
+  margin: 0;
   flex-direction: column;
   padding-top: 45px;
 }
@@ -28,15 +29,17 @@
 .mypageButton:visited:focus {
   font-weight: 800;
 }
+.containerRight {
+  width: 100%;
+}
 .leaveBtn {
   width: 100px;
   border: 0;
+  position: absolute;
+  bottom: 0;
   background-color: transparent;
   margin: 630px 0 0 150px;
   font-size: 1rem;
   cursor: pointer;
   opacity: 70%;
-}
-.containerRight {
-  width: 100%;
 }
