--- a/src/pages/mypage /myprofile/myprofile.module.css
+++ b/src/pages/mypage /myprofile/myprofile.module.css
@@ -1,5 +1,5 @@
 .profileContainer {
-  width: 100%;
+  width: 50%;
   height: 92vh;
   margin: 0 auto;
   padding-top: 15vh;
@@ -9,20 +9,35 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin-left: 280px;
+}
+.profileImgContainer {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: -100px;
+  margin-right: 100px;
 }
 .profileImgDiv {
-  display: flex;
-  margin-right: 30px;
   width: 300px;
   height: 300px;
+  justify-content: center;
+  margin-bottom: 23px;
 }
 .profileImg {
   width: 100%;
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
+}
+.imageBtn {
+  align-items: center;
+}
+.inputDiv {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
 }
 .updateBtnDiv {
   width: 100%;
