--- a/src/components/nav/loginmypage/nevmypage.module.css
+++ b/src/components/nav/loginmypage/nevmypage.module.css
@@ -4,25 +4,27 @@
 
 .dropdown > button {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 120px;
   height: 42px;
-  padding: 0px 14px;
-  margin-right: 16px;
+  padding: 5px 10px;
+  margin: 0;
   background: white;
   border-radius: 6px;
   border: 1px solid #ccc;
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
 }
 
 .dropdown > ul {
   display: flex;
-  width: 1140px;
-  height: 180px;
+  flex-direction: column;
+  align-items: center;
+  width: 120px;
+  height: 100px;
   margin: 0;
-  padding: 0;
+  padding: 0px;
   list-style: none;
   position: absolute;
   top: calc(100% + 8px);
@@ -30,30 +32,36 @@
   border: 1px solid #ccc;
   background-color: #ffffff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  border-radius: 6px;
   overflow: hidden;
 }
 
 .dropdown li {
-  border: 0.5px solid #ccc;
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdown li > button {
+  width: 100%;
+  padding: 10px 12px;
+  background: transparent;
+  border: none;
+  font-size: 12px;
+  text-align: center;
+  cursor: pointer;
+  height: 100%;
+  color: #2b2b2b;
 }
 
 .dropdown li:hover {
   background: #fef1f0;
 }
 
-.dropdown li > button {
-  width: 110px;
-  padding: 10px 12px;
-  background: transparent;
-  border: none;
-  font-size: 16px;
-  text-align: center;
-  cursor: pointer;
-  height: 100%;
-}
-.dropdown img {
-  width: 80px;
-  height: 80px;
+.link {
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
 }
