--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,17 +1,25 @@
-.navContainer {
-  display: flex;
-  margin: 0;
-  padding: 0 20px;
-  padding-right: 10px;
+.Container {
   width: 100%;
   height: 8vh;
-  justify-content: space-between;
-  align-items: center;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   position: fixed;
   z-index: 999;
-  background-color: white;
   box-sizing: border-box;
-  border-bottom: 3px solid #d8d8d8;
+  background-color: #ffffff;
+}
+.mainContainer {
+  width: 100%;
+  height: 8vh;
+  max-width: 1280px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+.navContainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 .logo {
   text-decoration: none;
@@ -19,26 +27,26 @@
   font-weight: bold;
   font-size: 25px;
   width: 15vw;
-  padding-right: 2px;
+  /* padding-right: 2px; */
   /* padding-left: 20px; */
 }
 .searchBox {
   /* padding-left: 200px; */
 }
 .searchBar {
-  width: 30vw;
+  /* width: 30vw;
   height: 35px;
   box-sizing: border-box;
   border-radius: 10px;
   background: #faf7f7;
-  margin: 0 5%;
+  margin: 0 5%; */
 }
 
 .community {
   display: flex;
   box-sizing: border-box;
-  border-right: 1px solid black;
-  padding: 10px;
+  border-right: 1px solid #c2c2c2;
+  padding: 3px 20px;
   text-decoration: none;
   color: black;
   font-weight: 500;
@@ -48,10 +56,12 @@
 .rightContent {
   display: flex;
   justify-content: space-between;
-  width: 320px;
-  gap: 10px;
+  width: 35vw;
+  max-width: 380px;
+  /* gap: 10px; */
   align-items: center;
-  padding-left: 10px;
+  /* margin-right: 10px; */
+  /* padding-left: 10px; */
 }
 
 .chatButton {
@@ -60,18 +70,28 @@
   height: 50px;
 }
 
+.login {
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+  height: 100%;
+  color: #2b2b2b;
+}
+
 .chatButton:hover,
 .logo:hover,
 .chat:hover,
 .community:hover {
-  color: #b40404;
-  transition: color 0.3s ease;
+  color: #e0655c;
+  transition: color 0.1s ease;
 }
 
 .chatButton,
 .logo,
 .chat {
-  transition: color 0.5s ease;
+  transition: color 0.1s ease;
 }
 
 .searchBar:focus {
