--- a/src/pages/community/index.module.css
+++ b/src/pages/community/index.module.css
@@ -1,9 +1,10 @@
 .maincontainer {
-  padding-top: 80px;
   display: flex;
   flex-direction: column;
   max-width: 1280px;
   margin: 0 auto;
+  padding: 0 20px;
+  padding-top: 100px;
 }
 h1 {
   color: #101828;
