--- a/src/pages/chat/index.module.css
+++ b/src/pages/chat/index.module.css
@@ -109,11 +109,15 @@
   flex-direction: row;
   position: fixed;
   top: 90vh;
+  right: 0;
   width: 70%;
 }
 .createRoomForm {
   display: flex;
+  width: 100%;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .createRoomSubmit {
@@ -121,6 +125,7 @@
   background-color: #f97066;
   color: white;
   outline: none;
-  border: 2px solid #f97066;
+  border: 4px solid #f97066;
   border-radius: 2px;
+  width: 208px;
 }
