--- a/src/pages/mypage /mypost/mypost.module.css
+++ b/src/pages/mypage /mypost/mypost.module.css
@@ -6,3 +6,17 @@
   padding-top: 4vh;
   max-width: 1280px;
 }
+
+.grid {
+  padding: 45px;
+}
+
+.buttonGroup {
+  display: flex;
+
+  padding: 0 40px;
+}
+
+.buttonGroup button {
+  margin-right: 15px; /* 버튼 사이의 간격 추가 */
+}
