Feat: 찜기능 토글 구현,  페이지네이션 버튼 및 커뮤니티 페이지 레이아웃 css 수정
찜기능 토글 구현,  페이지네이션 버튼 및 커뮤니티 페이지 레이아웃 css 수정

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -31,15 +31,7 @@
   /* padding-left: 20px; */
 }
 .searchBox {
-  /* padding-left: 200px; */
-}
-.searchBar {
-  /* width: 30vw;
-  height: 35px;
-  box-sizing: border-box;
-  border-radius: 10px;
-  background: #faf7f7;
-  margin: 0 5%; */
+  padding-left: 200px;
 }
 
 .community {
