--- a/src/components/postcard/postcard.module.css
+++ b/src/components/postcard/postcard.module.css
@@ -1,15 +1,17 @@
 .postcard {
   display: flex;
   flex-direction: column;
-  width: 277px;
-  height: 280px;
+  width: 290px;
+  height: 320px;
+  box-sizing: border-box;
 }
 
 .topBox {
   width: 100%;
-  height: 75%;
+  height: 80%;
   position: relative;
   overflow: hidden; /* 이미지 넘어가는거 숨김요 */
+  margin-bottom: 5px;
 }
 
 .topBox > img {
@@ -17,7 +19,7 @@
   height: 100%;
   display: block;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 
 .favoriteBtn {
@@ -33,7 +35,7 @@
 
 .bottomBox {
   width: 100%;
-  height: 25%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   padding: 10px 3px;
@@ -44,17 +46,29 @@
   display: flex;
   width: 100%;
   font-size: 16px;
-
   color: rgb(47, 52, 56);
   line-height: 18px;
+  margin-bottom: 5px;
 }
 
 .data {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
 }
-.data > p {
+.ingredient {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.profile {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 4px;
+}
+.ingredient {
   font-size: 12px;
   color: rgb(47, 52, 56);
   font-weight: 600;
@@ -79,4 +93,9 @@
 .comment > p {
   margin-left: 2px;
   font-size: 12px;
+}
+
+svg {
+  width: 12px;
+  height: 12px;
 }
