--- a/src/pages/chat/index.module.css
+++ b/src/pages/chat/index.module.css
@@ -2,22 +2,24 @@
   width: 100%;
   height: 92vh;
   margin: 0;
-  padding-top: 4vh;
+  padding-top: 6vh;
+  overflow: hidden;
 }
 
 .listChatBox {
   display: flex;
   position: relative;
   flex-direction: row;
-  width: 97%;
+  width: 100%;
   margin-top: 4vh;
+  height: 100%;
 }
 .listContainer {
   box-sizing: border-box;
-  border-right: 1.5px solid gray;
-  width: 30%;
+  /* border-right: 1.5px solid gray; */
+  width: 25%;
   height: 82.5vh;
-  padding-top: 2vh;
+  /* padding-top: 2vh; */
 }
 
 .myProfile {
@@ -25,6 +27,7 @@
   flex-direction: row;
   padding-left: 10px;
   gap: 50px;
+  justify-content: center;
 }
 
 .myNickname {
@@ -32,10 +35,23 @@
   /* text-align: center; */
   align-items: center;
 }
+.leftContainer {
+  display: flex;
+  width: 100%;
+  height: 92vh;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.chatListContainer {
+  height: 70vh;
+  overflow: scroll;
+  margin: 0;
+  padding: 0;
+}
 
 .chatList {
   box-sizing: border-box;
-  border-bottom: 1px solid black;
   display: flex;
   margin: 20px;
   padding: 5px;
@@ -68,56 +84,98 @@
   display: flex;
   position: relative;
   flex-direction: column;
+  overflow: auto;
 }
 
 .chatUser {
   width: 70%;
 }
 
-.leftChatBox {
+.messageContainer {
   display: flex;
+  position: relative;
   width: 100%;
-  padding-left: 20px;
+  height: 80vh;
   gap: 15px;
+  /* align-items: stretch; */
+  flex-direction: column;
+  /* padding-bottom: 100px; */
+  overflow-y: auto;
 }
 
-.leftOneChatBox {
+.smallChatBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.senderNickname {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.otherOneChatBox {
   display: flex;
   background-color: greenyellow;
-  padding: 10px;
-  text-align: center;
+  width: auto;
+  padding: 15px;
+  /* text-align: center; */
+  box-sizing: border-box;
+  border-radius: 15px;
+  align-self: flex-start;
 }
 
-.rightChatBox {
+.myOneChatBox {
   display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  padding-right: 20px;
-  gap: 15px;
-}
-
-.rightOneChatBox {
-  display: flex;
-
+  right: 0;
   background-color: greenyellow;
-  padding: 10px;
-  text-align: center;
+  border-radius: 15px;
+  width: auto;
+  padding: 15px;
+  align-self: flex-end;
+}
+.myMessageContent {
+  order: 2;
+  text-align: right;
+}
+
+.myMessageTimestamp {
+  order: 1;
+}
+.otherMessageTimestamp {
+  order: 1;
+}
+
+.rightContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  padding: 0 2vw;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .postChatContainer {
   display: flex;
   flex-direction: row;
-  position: fixed;
-  top: 90vh;
-  right: 0;
-  width: 70%;
+  /* position: fixed; */
+  width: 75%;
+  background-color: white;
+  /* padding-bottom: 100px; */
+  bottom: 0;
 }
+
 .createRoomForm {
   display: flex;
   width: 100%;
+  height: 20vh;
+  padding: 2vh 0;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
+  bottom: 0;
 }
 
 .createRoomSubmit {
