--- a/src/components/postcard/postcard.module.css
+++ b/src/components/postcard/postcard.module.css
@@ -95,6 +95,17 @@
   font-size: 12px;
 }
 
+.favoriteIcon {
+  position: absolute;
+  top: 10px;
+  right: 11px;
+  font-size: 24px;
+}
+
+.favorite {
+  color: #f97066;
+}
+
 svg {
   width: 12px;
   height: 12px;
