--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,5 +1,5 @@
 .Container {
-  width: 100%;
+  width: 100vw;
   height: 8vh;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   position: fixed;
@@ -7,31 +7,43 @@
   box-sizing: border-box;
   background-color: #ffffff;
 }
-.mainContainer {
-  width: 100%;
-  height: 8vh;
-  max-width: 1280px;
-  padding: 0 20px;
-  margin: 0 auto;
-}
+
 .navContainer {
   display: flex;
-  width: 100%;
+  /* width: 100vw; */
   height: 100%;
   justify-content: space-between;
   align-items: center;
+  padding: 0 60px;
 }
+.logoContainer {
+  display: flex;
+  flex: 1;
+  align-items: flex-start;
+  padding-left: 20px;
+}
+
 .logo {
   text-decoration: none;
   color: black;
   font-weight: bold;
   font-size: 25px;
-  width: 15vw;
+  /* width: 15vw; */
   /* padding-right: 2px; */
   /* padding-left: 20px; */
 }
 .searchBox {
-  padding-left: 200px;
+  flex: 1;
+}
+
+.rightContent {
+  flex: 1;
+  display: flex;
+  justify-content: space-evenly;
+  width: 30vw;
+  /* gap: 10px; */
+  align-items: center;
+  /* padding-left: 30px; */
 }
 
 .community {
@@ -42,20 +54,7 @@
   text-decoration: none;
   color: black;
   font-weight: 500;
-  /* width: 77px; */
 }
-
-.rightContent {
-  display: flex;
-  justify-content: space-between;
-  width: 35vw;
-  max-width: 380px;
-  /* gap: 10px; */
-  align-items: center;
-  /* margin-right: 10px; */
-  /* padding-left: 10px; */
-}
-
 .chatButton {
   cursor: pointer;
   width: 25px;
