--- a/src/components/searchbar/searchbar.module.css
+++ b/src/components/searchbar/searchbar.module.css
@@ -1,5 +1,5 @@
 .form {
-  width: 500px;
+  width: 100%;
   height: 40px;
   display: flex;
   justify-content: space-between;
@@ -8,7 +8,6 @@
   border-radius: 99px;
   border: 1px solid #b3b3b3;
   border: none;
-  padding: 0 15px;
 }
 
 .searchInput {
@@ -19,6 +18,7 @@
   border: 1px solid #b3b3b3;
   border: none;
   outline: none;
+  padding: 0 15px;
 }
 
 .searchButton {
@@ -26,4 +26,5 @@
   border-radius: 99px;
   border: 1px solid #b3b3b3;
   border: none;
+  margin-right: 10px;
 }
