Feat: 채팅 페이지네이션 기능구현, 보낸 채팅 보이도록 기능구현
채팅 페이지네이션 기능구현, 보낸 채팅 1개만 보이도록 기능구현,
axios 오류(access토큰 만료시 작동X) Fix

--- a/src/pages/chat/index.module.css
+++ b/src/pages/chat/index.module.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: row;
   padding-left: 10px;
-  gap: 50px;
+  gap: 20px;
   justify-content: center;
 }
 
@@ -101,6 +101,12 @@
   flex-direction: column;
   /* padding-bottom: 100px; */
   overflow-y: auto;
+}
+
+.scrollButtonContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .smallChatBox {
