--- a/src/components/nav/loginmypage/nevmypage.module.css
+++ b/src/components/nav/loginmypage/nevmypage.module.css
@@ -42,9 +42,6 @@
 .dropdown li {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .dropdown li > button {
@@ -68,4 +65,9 @@
   text-decoration: none;
   color: black;
   font-size: 14px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
