Style: 메인페이지 배너 변경 및 전체페이지 css수정
메인페이지 배너 변경 및 전체페이지 css수정

--- a/src/components/tagbutton/tagbutton.module.css
+++ b/src/components/tagbutton/tagbutton.module.css
@@ -11,7 +11,7 @@
   cursor: pointer;
 }
 .basebutton {
-  background-color: #efefef;
+  background-color: #f2f2f2;
   color: #616161;
   border: none;
   font-weight: 600;
