--- a/src/pages/mypage /index.module.css
+++ b/src/pages/mypage /index.module.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 92vh;
+  height: 200vh;
   margin: 0;
   padding-top: 4vh;
 }
 .containerLeft {
   width: 300px;
-  height: 100%;
+  height: auto;
   background-color: #fff8f7;
   display: flex;
   margin: 0;
@@ -35,10 +35,10 @@
 .leaveBtn {
   width: 100px;
   border: 0;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   background-color: transparent;
-  margin: 630px 0 0 150px;
+  margin: 0 0 0 150px;
   font-size: 1rem;
   cursor: pointer;
   opacity: 70%;
