Fix: Login 페이지 Login 했을 때 접근 가능한 오류 수정 , css수정 채팅 목록 불러올 떄 이미지타입 에러로 인한 오류 수정
토큰이 있다면 , 로그인 된 것으로 간주하여 로그인페이지 접근 못하게 막아놓음.
채팅에 profile_image 오류 수정

--- a/src/pages/mypage /index.module.css
+++ b/src/pages/mypage /index.module.css
@@ -38,8 +38,10 @@
   position: fixed;
   bottom: 0;
   background-color: transparent;
-  margin: 0 0 0 150px;
-  font-size: 1rem;
+  margin: 25px 0 0 150px;
+  font-size: 1.1rem;
+
+  font-weight: 500;
   cursor: pointer;
   opacity: 70%;
 }
